--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/typeorm": "^8.1.4",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
+    "express-session": "^1.17.3",
     "fontawesome": "^5.6.3",
     "hbs": "^4.2.0",
     "hbs-utils": "^0.0.4",
@@ -35,7 +36,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.6"
+    "typeorm": "^0.3.6",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -43,6 +45,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/jest": "27.5.0",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
